{
    "name": "InputMap",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "b3c3b34d-4848-4054-8ed1-29618d55447d",
            "actions": [
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "928aa0ec-c069-4561-b86a-c744aeefcdc1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "eb6df8a4-a790-40ac-a768-e32e08de4d49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "559d1dcb-b710-44c0-93ff-c3e15d125ab7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b876d5f8-9171-4628-adea-54147cc90d3d",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f83a9fb9-de2c-48eb-a1ca-caebe91bd644",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5e17364-ff3a-470e-ae99-4eea50b2d48a",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}